--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,2 +1,10 @@
 PORT = 6000
 db_url = "mongodb+srv://gamerxpro25580:namo123456@cluster0.lbn7f.mongodb.net/"
+JWT_SECRET_ ="randomtoken1234567890"
+JWT_EXPIRE = 7d
+ACTIVATION_SECRET = kjjklhfasdn*&%$%^JHG
+SMTP_HOST = smtp.gmail.com
+SMTP_PORT = 465
+SMTP_EMAIL = _Your mail_
+SMTP_PASSWORD = _passkey generated in gmail
+SMTP_SERVICE = gmail
