--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,10 +1,9 @@
-PORT = 6000
-db_url = "mongodb+srv://gamerxpro25580:namo123456@cluster0.lbn7f.mongodb.net/"
-JWT_SECRET_ ="randomtoken1234567890"
+PORT = 8000
+DB_URL = "mongodb+srv://gamerxpro25580:namo123456@cluster0.lbn7f.mongodb.net/"
+JWT_SECREAT = 
 JWT_EXPIRE = 7d
-ACTIVATION_SECRET = kjjklhfasdn*&%$%^JHG
-SMTP_HOST = smtp.gmail.com
-SMTP_PORT = 465
-SMTP_EMAIL = _Your mail_
-SMTP_PASSWORD = _passkey generated in gmail
-SMTP_SERVICE = gmail
+ACTIVATION_SECRET = 
+SWTP_HOST = 
+SMTP_EMAIL =
+SMTP_PASSWORD = 
+SMTP_SERVICE = 
