--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,7 +1,6 @@
+
+DB_URL = "mongodb+srv://gamerxpro25580:namo1234@cluster0.ixd9v.mongodb.net/"
 PORT = 8000
-
-DB_URL = "mongodb+srv://gamerxpro25580:namo123456@cluster0.lbn7f.mongodb.net/"
-
 JWT_SECRET_ = "randomtoken1234567890"
 JWT_EXPIRE = 7d
 ACTIVATION_SECRET = kjjklhfasdn*&%$%^JHG
